--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,12 @@ body{
     margin:0;
     border: 0;
 }
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none; 
+}
